# et

./: .env  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  cliff.toml  db_init.sh  default.nix  flake.nix
.github/workflows/: pull_request.yml  push_main.yml
.sqlx/: query-02134259aaaac6d5a5288c1acb056894270fad439a4f80d800b20f34cfe4800c.json  query-05366e8a4891eaa3c14dd7cea3bd0b9f002256cc431db76fbd9101e4bb7a421c.json  query-06262dc56d1263299ec10cb1e7992feebf58a1fcc9a7763f57a173c6d8db4ca8.json  query-06e9402047d246982a77007864ba55be18abd43407b1c2c6fe0922d21098875b.json  query-0705826f6ff427c9abbf960886ce564650d2ac032d048321b81ff4c30cd64c36.json  query-09355c28210fda05ea722d6f905dc99e81ce0831de9ac47c44e2bfce56902157.json  query-098aa5750b8c530227dc9bb15abe88498d09c056a666645ed16758cc878c3638.json  query-0f0c1768a96d081926d8f2bd8223c845241119aa073ce3dc5fef0629171817a3.json  query-0f5a796762a9fe943b796989485abe6d71e54e5176cf0559bec7779dcec7d8ad.json  query-0fd392716381ecb322e8fc954dc8adc060148693d9e4c0f96ab6ab8b661d03d9.json  query-1059d7502ddd2e10c57bc0876aec11be08c1044a7111642927ede6fa5a61534e.json  query-116c75c5f3fcd22728352fe1300b0c5e121b4af1ee0be5a6dd7ca502e10fac44.json  query-1868cf1fc022e053941eaa32f56f6ad3ab24106145042ae00420dc9b303eac11.json  query-1b42903219c9ec326de7a17a9b0d0eed00af27220260e3831b4d51db30572d54.json  query-1e2c81c03817cf319edebcf8c2ecd66e2a9fd4960e01f151a1ec3a259666ec3a.json  query-21344ce8c23b513a2635be8cd678c17935e44f987af759012388c73e0bc84453.json  query-2205bb0fc032ac2f16b5623eb6286a202e868f3ddc96e0d687ca3e9d1bb0c09b.json  query-26d51787c9075a2cf986a5632b0a5d41fc2ffa77397c788eecdb8d1f0467cb01.json  query-28c5ccc9ce8a0a9a4596ce529acb58d6af783aab9b66725185bf7a644dfe9f9e.json  query-2a4d775b00206adc70d2225ee429e83d126f7ae2e422cb0fabbfb31eea8b2705.json  query-2c4cf2d21507333a5721d87d733e4c7e33162f5135e7a46de8bc111a4a85faf2.json  query-2f071533bc555c6c5be34c88dc31877745ec51d2f6ca0c85c6ec422e63fe8218.json  query-314f10be31eab238b654747799c8a535042a01ea962361b5dddc7bbd6e06e7ca.json  query-332a2e820da812fe1e540bfb8cb44b31153b6f318ee66e369fe00f7340ae51cb.json  query-33597bcb9f47f51b52f311b18553efc1a8287424d9f3ee81e3cff5b2c3085859.json  query-33de0cfff55919d137f96b0f0215334729ef0b899d62c4c7ca957a60cdac8450.json  query-3b15c5009112828c23e72fec61a0101cda1b1e8bf0292a23e0f97582f4475836.json  query-3c47be4115d04204b5ffeccce59d5373d05414716b100938ad83213b24b691ba.json  query-3f4d38c6f5950a4369d19ada7ad54655bcea70892acb86c23f90438541fd0c95.json  query-41d9835ede2ce69ab99d67f1805552358aae81d78c2ac8c0ce7dfb2c64fe3ea4.json  query-4232fe17c9397c59ff8dc7f98ef0ffd3204b7803ece639736ee2f1080351f50e.json  query-45ae62f1e31aa7d4588481ed033510333ba4174500ad12dbc4e3c7490ec5802e.json  query-4aa6c705dd72a7e8f16ddc719fb56a5b5e5e5422ebaaa7f18f75d2015f1e4e4f.json  query-4e828ff840d371cda75b8479ba4841453288f22b1b2d8dcca2b6c96260ac9e96.json  query-534ef23fdf62441f07eac5e822fd67411c5f641e07283533ad2ed4f3811ce437.json  query-537a0ceea0bac77003d267aa0e365f591ff1fbfe4c7efdeb7552125fab93a6ad.json  query-557ff0601a462fe921a30fe281cbe51f456d09e4fd94ee8b29900a14529f66b1.json  query-56faec5020df14ec963e245c7563dc871fe5aa780eb0b07a53776ebc9c9bc3a2.json  query-5d3a8fe771f9532cb92efa32abceafaefd318bd87e9f9d4e8bcd65934beaf81b.json  query-5d421f94ef1f5905c5afaff36744d1f1a19d6e751ae34e3f7159b95196484c91.json  (+72 more)
schema/: labels.hcl  schema.sql  simplefin.hcl  user.hcl
src/: accounts.rs  charts.rs  dates.rs  html.rs  labels.rs  main.rs  prop_span.rs  rules.rs  simplefin_api.rs  svg_icon.rs  sync_manager.rs  tx.rs
