[package]
name = "et"
version = "0.0.1"
edition = "2021"
description = "Expense Tracker"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["macros"]}
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive", "env"]}
maud = { version = "0.26.0", features = ["axum"] }
futures = "0.3.30"
tower-cookies = { version = "0.10.0", features = ["signed", "private"]}
tower-http = { version = "0.5.2", features = ["tracing", "trace"] }
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"]}
toml = "0.8.8"
tracing = "0.1.40"

url = "2.5.0"
signal-hook = "0.3.17"
service_conventions = { version = "0.0.8", features = ["tracing", "oidc"]}
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "time", "chrono", "rust_decimal"] }
base64 = "0.22.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
uuid = {version = "1.8.0", features = ["v4"]}
thiserror = "1.0.58"
rust_decimal = { version = "1.35.0", features = ["db-postgres", "serde-float"] }
