[package]
name = "et"
version = "2.7.7"
edition = "2021"
description = "Expense Tracker"
license = "Apache-2.0"
publish = false

[[bin]]
name = "et-migrate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.8.0", features = ["macros"]}
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"]}

# Waiting for maud > 0.26.0
maud = { git = "https://github.com/lambda-fairy/maud.git", ref = "3eaa6e8f60fca34273f5be25dc5227829c1995b1", version = "0.26.0", features = ["axum"] }
futures = "0.3.30"
tower-cookies = { version = "0.11.0", features = ["signed", "private"]}
tower-http = { version = "0.6.0", features = ["tracing", "trace", "compression-gzip"] }
once_cell = "1.19.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"]}
toml = "0.8.12"
tracing = "0.1.40"

tonic = { version = "0.12.0", features = ["tls", "tls-roots"] }
url = "2.5.0"
signal-hook = "0.3.17"
service_conventions = { version = "0.0.29", features = ["tracing", "oidc", "tracing-http"]}

# Waiting on sqlx > v0.8.2
sqlx = { git = "https://github.com/launchbadge/sqlx.git", branch="main", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono", "rust_decimal"] }
# sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono", "rust_decimal"] }
base64 = "0.22.1"
reqwest = { version = "0.12.4", features = ["rustls-tls", "json"], default-features = false }
uuid = {version = "1.8.0", features = ["v4", "serde"]}
thiserror = "2.0.0"
rust_decimal = { version = "1.35.0", features = ["db-postgres", "serde-float"] }
rust-embed = { version = "8.3.0", features = ["axum", "mime-guess", "mime_guess"] }

# Waiting on axum-embed > 0.1.0
axum-embed = { git = "https://github.com/informationsea/axum-embed.git", ref = "f43a1c284fe41c5969bfcb9eae8fb85d8be0d3ff", version = "0.2.0"}
axum-extra = { version = "0.11.0", features = ["query"] }
http = "1.1.0"
serde_qs = "0.14.0"
chronoutil = "0.2.7"

declare_schema = { version = "0.0.10" }
charts-rs = "0.3.11"
serde_html_form = "0.2.6"

[patch.crates-io]
# https://github.com/launchbadge/sqlx/pull/3553
sqlx = { git = "https://github.com/launchbadge/sqlx.git", branch="main", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono", "rust_decimal"] }
